--- a/application/requirements.txt
+++ b/application/requirements.txt
@@ -13,6 +13,7 @@ Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.2
+gunicorn==20.0.4
 idna==2.10
 ipython==7.18.1
 ipython-genutils==0.2.0
